2005-05-18  Peter Korsgaard  <jacmet@sunsite.dk>

	* src/var_misc.c (hal_ppc40x_delay_us): Removed double
	initialization of delay_period. Work correctly for system clock !=
	100Hz.

2005-05-04  Peter Korsgaard  <jacmet@sunsite.dk>

	* include/var_io.h: Only define PCI macros if 405GP PCI support is
	enabled.

2004-09-16  Gary Thomas  <gary@mlbassoc.com>

	* src/hal_diag.c: Assert RTS/DTR modem signals.

2004-02-26  Gary Thomas  <gary@mlbassoc.com>

	* src/ppc405_pci.c: 
	* cdl/hal_powerpc_ppc40x.cdl: Make display of PCI "contents" optional.

2004-02-17  Gary Thomas  <gary@mlbassoc.com>

	* cdl/hal_powerpc_ppc40x.cdl: Fix real time clock - this counter
	has no dividers in the chain (hence no need to divide by 4)

2003-10-15  Gary Thomas  <gary@mlbassoc.com>

	* include/var_regs.h: Changes to allow building with GCC-3.3.x
	since the newest GAS doesn't like spaces in expressions :-(

2003-10-02  Gary Thomas  <gary@mlbassoc.com>

	* include/var_regs.h: Add CPU serial number registers (405 only)

2003-09-26  Gary Thomas  <gary@mlbassoc.com>

	* src/ppc405_pci.c: IRQ mapping now defined by platform.

2003-09-20  Gary Thomas  <gary@mlbassoc.com>

	* src/ppc405_pci.c: Need call to cyg_pci_init() to get proper I/O
	addressing setup.

2003-09-19  Gary Thomas  <gary@mlbassoc.com>

	* src/ppc405_pci.c: New file - basic support for PCI on PPC 405GP

	* src/hal_diag.c: New file - diagnostic I/O support (previously
	was defined by platforms).  Note: only for 405GP based devices.

2002-11-21  Gary Thomas  <gary@mlbassoc.com>

	* src/var_intr.c: 
	* include/variant.inc: 
	* include/var_intr.h: Better variant/platform support (platforms can
	override most all default behaviour).

2002-11-20  Gary Thomas  <gary@mlbassoc.com>

	* include/var_cache.h: Cache sizes differ based on CPU.

	* include/var_intr.h: 
	* include/var_regs.h:
	* src/var_intr.c: Split interrupt control based on CPU type since
	403 uses a different controller than the 405 family.
